--- a/src/components/analyze/aq-analyze-home-backtest-item.html
+++ b/src/components/analyze/aq-analyze-home-backtest-item.html
@@ -1,6 +1,8 @@
 		
 
 <link rel='import' href='../../../bower_components/google-chart/google-chart.html'>
+<link rel='import' href="../../../bower_components/iron-scroll-spy/iron-auto-scroll-spy.html">
+
 <link rel='import' href='../common/aq-backtest-detail-item.html'>
 
 <dom-module id='aq-analyze-home-backtest-item'>	
