--- a/src/components/community/aq-community-home.html
+++ b/src/components/community/aq-community-home.html
@@ -1,4 +1,6 @@
 <link rel='import' href='../../../bower_components/paper-fab/paper-fab.html'>
+<link rel='import' href='../../../bower_components/paper-tabs/paper-tabs.html'>
+<link rel='import' href='../../../bower_components/paper-tabs/paper-tab.html'>
 <link rel="import" href="./aq-community-home-searchbar.html">
 <link rel="import" href="./aq-community-home-post-item.html">
 
@@ -32,14 +34,15 @@
     }
 
     paper-tabs {
-        --paper-tabs-selection-bar-color: teal;
+        
     }
 
     .community-tabs {
         max-width: 350px;
         font-size: 14px;
-        margin-top: 20px;
+        margin-top: 50px;
         border-bottom: 1px solid #e5e5e5;
+        --paper-tabs-selection-bar-color: teal;
     }
 
     #allposts {
@@ -52,9 +55,9 @@
 <dom-module id="aq-community-home">
     <template>
         <div id='container'>
-            <aq-community-home-searchbar></aq-community-home-searchbar>
-            <paper-tabs on-iron-select="onActivateTab" class="community-tabs" class="flex" selected="{{selected}}" noink>
-                <paper-tab>All</paper-tab>
+            <div>
+            <aq-community-home-searchbar></aq-community-home-searchbar></div>
+            <paper-tabs on-iron-select="onActivateTab" class="community-tabs flex" selected="{{selected}}" noink>
                 <paper-tab>Popular</paper-tab>
                 <paper-tab>Newest</paper-tab>
                 <paper-tab>Following</paper-tab>
@@ -147,7 +150,8 @@
                   id='threads'
                   params='[[params]]'
                   handle-as="json"
-                  on-response="onAllThreads"
+                  on-response="onGetAllThreadsResponse"
+                  on-error="onGetAllThreadsError"
                   headers='{{header}}'
                   debounce-duration="300">
                 </iron-ajax>
@@ -199,25 +203,23 @@
             ready: function() {
                 var x = localStorage.getItem('my-app-storage');
                 var user = JSON.parse(x).user;
-                this.firstName = user.firstName;
-                this.lastName = user.lastName;
-                this.email = user.email;
-                this.letter = this.firstName[0];
-                this.header = {
+                if (user.token) {
+                  this.header = {
                     "aimsquant-token": user.token,
-                    "Content-Type": "application/json"
-                };
+                    "Content-Type": "application/json"};  
+                }
+              
 
                 this.orderby = "views";
             },
 
 
             isPersonalSelected() {
-                return this.selected == 4;
+                return this.selected == 3;
             },
 
             onActivateTab() {
-                if (this.selected == 2) {
+                if (this.selected == 1) {
                   this.orderby = 'createdAt';
                 } else {
                   this.orderby = 'views';
@@ -225,19 +227,28 @@
 
                 this.processparams();
 
-                this.getAllPosts();
+                this.getAllThreads();
             },
 
-            getAllPosts() {
+            getAllThreads() {
                 this.$.threads.generateRequest();
             },
 
-            onAllThreads(data) {
+            onGetAllThreadsResponse(data) {
                 this.items = data.detail.response.threads;
-                console.log(this.items);
+                //console.log(this.items);
+            },
+
+            onGetAllThreadsError(data) {
+                console.log(data);         
             },
 
             createPost() {
+                if (!this.header) {
+                  this.router.go('/user/signin', {lastRequest:'/dashboard/community/create'});
+                  return;
+                }
+
                 this.router.go('/dashboard/community/create');
             },
 
