--- a/src/components/community/aq-community-postdetail-reply.html
+++ b/src/components/community/aq-community-postdetail-reply.html
@@ -15,36 +15,60 @@
         </div>
       </div>
       
-      <iron-ajax url="http://localhost:3002/api/v2/thread/{{threadid}}" body="{{threadData}}" method='POST' id='thread' headers='{{header}}' handle-as="json" on-response="handlePostThread" last-response="{{ajaxResponse}}" debounce-duration="300"></iron-ajax>
+      <iron-ajax 
+          url="http://localhost:3002/api/v2/thread/{{threadid}}" 
+          body="{{threadData}}" 
+          method='POST' 
+          id='postThreadQuery' 
+          headers='{{header}}' 
+          handle-as="json" 
+          on-response="onPostReplyResponse"
+          on-error="onPostReplyError" 
+          last-response="{{ajaxResponse}}" 
+          debounce-duration="300">
+      </iron-ajax>
   </template>
 
   <script>
     Polymer({
       is: 'aq-community-postdetail-reply',
+
       ready: function() {
           var x = localStorage.getItem('my-app-storage');
           var user = JSON.parse(x).user;
-          this.header = {
+          if (user.token) {
+            this.header = {
               "aimsquant-token": user.token,
-              "Content-Type": "application/json"
-          }
+              "Content-Type": "application/json"};  
+          }        
       },
+
       postThread: function() {
+
+          if (!this.header) {
+            this.router.go('user/signin',{lastRequest:('/dashboard/community/topics/[[threadid]]')});
+            return;
+          }
+          
           const markdownText = this.$.editor.getContent();
           
           if (markdownText.length>0) {
             this.threadData = {
                 "markdownText": markdownText
             };
-            this.$.thread.generateRequest();
+            this.$.postThreadQuery.generateRequest();
           }
       },
 
-      handlePostThread: function(e) {
+      onPostThreadResponse: function(e) {
         var replies = e.detail.response.replies;
         if (replies.length > 0) {
           this.fire('reply-added',{reply:replies[replies.length - 1]});  
         }      
+      },
+
+      onPostReplyError: function(e) {
+        console.log(e);
       },
 
       clearEditor() {
