--- a/src/components/editor/aq-editor-home.html
+++ b/src/components/editor/aq-editor-home.html
@@ -70,7 +70,7 @@
       	width:32%;
       	--min-width: 250px;
       	margin-right: 30px;
-      	padding-left: 30px;
+      	padding-left: 0px;
       }
 
       .backtest {
@@ -118,17 +118,18 @@
 		      <div class="backtest">#Backtests</div>
 		    </div>
 
-		    <iron-ajax
+	        <iron-ajax
 		    	  auto	
                   url="http://localhost:3002/api/v2/strategy"
                   method='GET'
-                  id='strategies'
+                  id='getStrategiesQuery'
                   handle-as="json"
-                  on-response="onAllStrategies"
+                  on-response="onGetStrategiesResponse"
+                  on-error="onGetStrategiesError"
                   headers='{{header}}'
                   debounce-duration="300">
             </iron-ajax>
-		    
+        
 	    	<template is="dom-repeat" items="{{strategies}}" id='strategyList'>
 	    		<aq-editor-home-strategy-item strategy-name = "[[item.name]]"
 	    									num-backtest = "5[[item.backtests.length]]"
@@ -197,17 +198,23 @@
 
 		ready: function() {
             var x = localStorage.getItem('my-app-storage');
-            var user = JSON.parse(x).user;
-            this.header = {
-                "aimsquant-token": user.token,
-                "Content-Type": "application/json"
-        	};
-
+	        var user = JSON.parse(x).user;
+	        if (user.token) {
+	          this.header = {
+	            "aimsquant-token": user.token,
+	            "Content-Type": "application/json"};  
+	        }
         },
 
-        onAllStrategies(data) {
+        onGetStrategiesResponse(data) {
+        	//check for error
         	this.strategies = data.detail.response;	
         },
+
+		onGetStrategiesError(data) {
+        	//console.log(data);
+        	//check for error
+        },        
 
 		listeners: {
 			'mouseover': '_mouseOver',
