1. Added functioning of delete/compare in analyze along with some CSS changes 2. Modified community search bar to wrap in case of narrow viewport 3. Modified CSS design of strategy input dialog

--- a/src/components/analyze/aq-analyze-home-backtest-item.html
+++ b/src/components/analyze/aq-analyze-home-backtest-item.html
@@ -49,7 +49,7 @@
 			padding: 0px;
 
 			margin-top:15px;
-			--paper-checkbox-checked-color: teal;
+			--paper-checkbox-checked-color: #cf6766;--teal;
 		}
 
 	 	#content :hover{
@@ -100,7 +100,7 @@
 	<template>
 		<paper-card>
 			<div id='content' class="layout horizontal flex">		
-				<paper-checkbox noink></paper-checkbox>
+				<paper-checkbox noink id='checkbox' on-tap = 'onCheck'></paper-checkbox>
 
 				<a href$="" on-click='toggle' class="layout horizontal flex"> 
 				
@@ -192,12 +192,21 @@
 					      data: [-65, -59, 80, 81, 56, 55, -40,65, 59, -80, 81, 56, 55, 40,-65, 59, 80, 81, -56, 55, 40,-65, 59, 80, 81, 56, -55, 40,65, -59, 80, 81, 56, 55, 40,65, -59, 80, 81, -56, 55, 40]
 					    }]
 					}, 
+				},
+
+				backtest: {
+					type:Object,
 				},	
 			},
 
 			toggle() {
 				this.$.collapse.toggle();
 			},
+
+			onCheck() {
+				this.fire('backtestChecked',{id:this.backtest._id, checked:this.$.checkbox.checked})
+			},
+
 		});
 	</script>
 </dom-module>
