--- a/src/components/community/aq-community-home-searchbar.html
+++ b/src/components/community/aq-community-home-searchbar.html
@@ -34,6 +34,7 @@
 		  --border-left:none !important;
 		  margin-top:1px;
 		  max-width: 520px;
+		  min-width: 400px;
 		}
 
 		#searchbox:focus{
@@ -90,7 +91,7 @@
 	</style>
 	
 	<template>
-      		<div id="search" class="wrap flex_container layout horizontal">
+      		<div id="search" class="wrap flex layout horizontal">
 	    		<aq-dropdown vertical-offset=56 class="self-center" id='category_dd' options="[[categories]]"></aq-dropdown>
     		
 
