--- a/src/components/editor/aq-editor-home-strategy-item.html
+++ b/src/components/editor/aq-editor-home-strategy-item.html
@@ -25,16 +25,6 @@
         	@apply(--layout-horizontal);
       	}
 
-		.header {
-	      	border: 1px solid #d0d0d0;
-	        padding: 0 55px;
-	        line-height: 56px;
-	        font-size: 15px;
-	        font-weight: bold;
-	        border-bottom: 1px solid #e5e5e5;
-	        background-color: white;
-	    }
-
 	    .row {
 	        border-bottom: 1px solid #e5e5e5;
 	        border: 1px solid #d0d0d0;
@@ -45,9 +35,10 @@
         .row {
 	        box-sizing: border-box;
 	        overflow: hidden;
-	        width: 100%;
+	        --width: 100%;
 	        font-weight: 400;
 	        font-size: 13px;
+	        min-width: 640px;
 
 	    }
 
@@ -58,7 +49,7 @@
         }
 
         paper-checkbox {
-	        --paper-checkbox-checked-color: #333a56; --#99ced4;
+	        --paper-checkbox-checked-color: #cf6766;--#333a56; --#99ced4;
         }
 
 	    
@@ -81,7 +72,7 @@
 	    }
 
         .strategy-desc {
-	      	width:32%;
+	      	width:36%;
 	      	--width: 350px;   	
 	      	margin-right:30px;
 
@@ -106,9 +97,7 @@
 	</style>
 
 	<template>
-		<iron-media-query query="(max-width: 640px)" query-matches="{{narrowViewport}}"></iron-media-query>
-
-		<div class="row flex layout horizontal" id="{{strategyId}}">
+		<div class="row layout horizontal" id="{{strategyId}}">
 	      	<paper-checkbox id='checkbox' noink on-change='onCheck'></paper-checkbox>
 	          <div class="strategy-name self-center"><span on-click = 'goToEditor'>[[strategyName]]</span></div>  
 	          <div class="strategy-desc self-center">[[strategyDesc]]</div>
