--- a/src/components/editor/aq-editor-home.html
+++ b/src/components/editor/aq-editor-home.html
@@ -34,6 +34,7 @@
         font-weight: bold;
         border-bottom: 1px solid #e5e5e5;
         background-color:#99ced4;
+        min-width:640px;
 
       }
 
@@ -61,13 +62,13 @@
 
       .name {
         --min-width:220px;
-        width:32%;
+        width:36%;
         font-weight: bold;
         margin-right: 30px;
       }
 
       .description {
-      	width:32%;
+      	width:36%;
       	--min-width: 250px;
       	margin-right: 30px;
       	padding-left: 0px;
@@ -94,7 +95,7 @@
       	margin:0 auto;
       	margin-top: 10px;
       	color: #333a56;
-      	width: 90%;
+      	width: 95%;
 
       }
 
