Added separate page for comparing backtests. But it needs modifications.

--- a/src/components/aq-sidebar.html
+++ b/src/components/aq-sidebar.html
@@ -148,6 +148,11 @@
           <iron-icon item-icon icon="vaadin-icons:edit"></iron-icon> 
         </paper-icon-item>
 
+        <paper-icon-item action-panel='comparemore' on-tap="onAction">Compare More
+          <iron-icon item-icon icon="vaadin-icons:edit"></iron-icon> 
+        </paper-icon-item>
+
+
         <paper-icon-item action-panel='createpost' on-tap="onAction">Write a Post
           <iron-icon item-icon icon="communication:comment"></iron-icon>
         </paper-icon-item>
