--- a/src/layouts/aq-analyze-main.html
+++ b/src/layouts/aq-analyze-main.html
@@ -6,6 +6,7 @@
 
 <link rel="import" href="../components/analyze/aq-analyze-home.html">
 <link rel="import" href="../components/analyze/aq-analyze-compare.html">
+<link rel="import" href="../components/analyze/aq-analyze-more.html">
 <link rel="import" href="../components/analyze/aq-analyze-compare-results.html">
 
 <dom-module id="aq-analyze-main">
@@ -17,13 +18,15 @@
   </style>
   <template>
     <app-router mode="hash" trailingSlash="ignore">
-        <app-route path="/dashboard/analyze/:strategyId" element='aq-analyze-home' bindrouter=""></app-route>
-
-
+        
         <!--app-route path="/dashboard/analyze/*" element='aq-analyze-home' bindrouter=""></app-route-->
 
         <app-route path="/dashboard/analyze/compare" element='aq-analyze-compare' bindrouter=""></app-route>
+        <app-route path="/dashboard/analyze/more" element='aq-analyze-more' bindrouter=""></app-route>
         <app-route path="/dashboard/analyze/compare/x" element='aq-analyze-compare-results' bindrouter=""></app-route>
+
+        <app-route path="/dashboard/analyze/:strategyId" element='aq-analyze-home' bindrouter=""></app-route>
+
     </app-router>
   </template>
 
